--- a/package.json
+++ b/package.json
@@ -69,8 +69,10 @@
     "core-js": "3.8.3",
     "mysql2": "^2.2.5",
     "normalize.css": "^8.0.1",
+    "protobufjs": "^6.10.2",
     "reflect-metadata": "^0.1.13",
     "rxjs": "^6.6.0",
+    "sc-formatter": "^3.0.2",
     "socketcluster-client": "16.0.2",
     "socketcluster-server": "^16.0.1",
     "tslib": "^2.0.0",
@@ -99,7 +101,7 @@
     "@types/express": "^4.17.6",
     "@types/jest": "26.0.8",
     "@types/mysql2": "github:types/mysql2",
-    "@types/node": "12.12.38",
+    "@types/node": "^12.12.38",
     "@types/socketcluster-client": "^15.1.3",
     "@types/socketcluster-server": "^15.0.1",
     "@types/uuid": "^8.3.0",
