--- a/package.json
+++ b/package.json
@@ -75,6 +75,7 @@
     "rxjs": "^6.6.0",
     "socketcluster-client": "16.0.2",
     "socketcluster-server": "^16.0.1",
+    "spark-md5": "^3.0.1",
     "tslib": "^2.0.0",
     "zone.js": "0.11.3"
   },
@@ -104,6 +105,7 @@
     "@types/node": "^12.12.38",
     "@types/socketcluster-client": "^15.1.3",
     "@types/socketcluster-server": "^15.0.1",
+    "@types/spark-md5": "^3.0.2",
     "@types/uuid": "^8.3.0",
     "@typescript-eslint/eslint-plugin": "4.3.0",
     "@typescript-eslint/parser": "4.3.0",
