--- a/package.json
+++ b/package.json
@@ -9,10 +9,11 @@
     "start:front": "ng serve front",
     "start:front:network": "ng serve front --host 0.0.0.0 --ssl",
     "start:api": "ng serve api",
+    "start:identity": "ng serve identity",
     "start:only-db": "docker-compose -f db-docker-compose.yml up",
     "build": "ng build",
-    "build:front:prod": "ng build front --prod skip-nx-cache",
-    "build:front:prod:sourcemap": "ng build front --prod skip-nx-cache --source-map",
+    "build:front:prod": "ng build front --configuration production skip-nx-cache",
+    "build:front:prod:sourcemap": "ng build front --configuration production skip-nx-cache --source-map",
     "bundle:front:report": "source-map-explorer dist/apps/front/**/*.js",
     "test": "ng test",
     "lint": "nx workspace-lint && ng lint",
@@ -32,20 +33,20 @@
     "workspace-schematic": "nx workspace-schematic",
     "dep-graph": "nx dep-graph",
     "help": "nx help",
-    "postinstall": "ngcc --properties es2015 browser module main --first-only --create-ivy-entry-points && node ./decorate-angular-cli.js"
+    "postinstall": "ngcc --properties es2015 browser module main && node ./decorate-angular-cli.js"
   },
   "private": true,
   "dependencies": {
-    "@angular/animations": "11.1.2",
-    "@angular/cdk": "11.1.2",
-    "@angular/common": "11.1.2",
-    "@angular/compiler": "11.1.2",
-    "@angular/core": "11.1.2",
-    "@angular/forms": "11.1.2",
-    "@angular/material": "11.1.2",
-    "@angular/platform-browser": "11.1.2",
-    "@angular/platform-browser-dynamic": "11.1.2",
-    "@angular/router": "11.1.2",
+    "@angular/animations": "12.1.0",
+    "@angular/cdk": "12.1.0",
+    "@angular/common": "12.1.0",
+    "@angular/compiler": "12.1.0",
+    "@angular/core": "12.1.0",
+    "@angular/forms": "12.1.0",
+    "@angular/material": "12.1.0",
+    "@angular/platform-browser": "12.1.0",
+    "@angular/platform-browser-dynamic": "12.1.0",
+    "@angular/router": "12.1.0",
     "@mikro-orm/core": "^4.4.2",
     "@mikro-orm/mysql": "^4.4.2",
     "@mikro-orm/nestjs": "^4.2.0",
@@ -56,10 +57,10 @@
     "@nestjs/platform-express": "7.6.11",
     "@nestjs/websockets": "7.6.11",
     "@ngneat/transloco": "2.20.0",
-    "@ngrx/effects": "10.1.2",
-    "@ngrx/entity": "10.1.2",
-    "@ngrx/router-store": "10.1.2",
-    "@ngrx/store": "10.1.2",
+    "@ngrx/effects": "12.2.0",
+    "@ngrx/entity": "12.2.0",
+    "@ngrx/router-store": "12.2.0",
+    "@ngrx/store": "12.2.0",
     "async-stream-emitter": "^4.0.0",
     "bcrypt": "^5.0.0",
     "class-transformer": "0.3.2",
@@ -70,6 +71,7 @@
     "flag-icon-css": "^3.5.0",
     "mysql2": "^2.2.5",
     "normalize.css": "^8.0.1",
+    "oidc-provider": "^7.6.0",
     "protobufjs": "^6.10.2",
     "reflect-metadata": "^0.1.13",
     "rxjs": "^6.6.0",
@@ -77,24 +79,25 @@
     "socketcluster-server": "^16.0.1",
     "spark-md5": "^3.0.1",
     "tslib": "^2.0.0",
-    "zone.js": "0.11.3"
+    "uuid": "^8.3.2",
+    "zone.js": "~0.11.4"
   },
   "devDependencies": {
-    "@angular-devkit/build-angular": "0.1101.4",
-    "@angular/cli": "11.1.4",
-    "@angular/compiler-cli": "11.1.2",
-    "@angular/language-service": "11.1.2",
+    "@angular-devkit/build-angular": "12.1.4",
+    "@angular/cli": "12.1.4",
+    "@angular/compiler-cli": "12.1.0",
+    "@angular/language-service": "12.1.0",
     "@nestjs/schematics": "^7.0.1",
     "@nestjs/testing": "^7.1.3",
-    "@ngrx/schematics": "10.0.0",
-    "@ngrx/store-devtools": "10.0.0",
-    "@nrwl/angular": "11.2.10",
-    "@nrwl/cypress": "11.2.10",
-    "@nrwl/eslint-plugin-nx": "11.2.10",
-    "@nrwl/jest": "11.2.10",
-    "@nrwl/nest": "11.2.10",
-    "@nrwl/node": "11.2.10",
-    "@nrwl/workspace": "11.2.10",
+    "@ngrx/schematics": "12.2.0",
+    "@ngrx/store-devtools": "12.2.0",
+    "@nrwl/angular": "12.6.3",
+    "@nrwl/cypress": "12.6.3",
+    "@nrwl/eslint-plugin-nx": "12.6.3",
+    "@nrwl/jest": "12.6.3",
+    "@nrwl/nest": "12.6.3",
+    "@nrwl/node": "12.6.3",
+    "@nrwl/workspace": "12.6.3",
     "@types/async-stream-emitter": "^3.0.0",
     "@types/bcrypt": "^3.0.0",
     "@types/cookie": "^0.4.0",
@@ -102,11 +105,11 @@
     "@types/express": "^4.17.6",
     "@types/jest": "26.0.8",
     "@types/mysql2": "github:types/mysql2",
-    "@types/node": "^12.12.38",
+    "@types/node": "14.14.33",
     "@types/socketcluster-client": "^15.1.3",
     "@types/socketcluster-server": "^15.0.1",
     "@types/spark-md5": "^3.0.2",
-    "@types/uuid": "^8.3.0",
+    "@types/uuid": "^8.3.1",
     "@typescript-eslint/eslint-plugin": "4.3.0",
     "@typescript-eslint/parser": "4.3.0",
     "codelyzer": "6.0.0",
@@ -115,13 +118,13 @@
     "eslint": "7.10.0",
     "eslint-config-prettier": "6.0.0",
     "eslint-plugin-cypress": "^2.11.2",
-    "jest": "26.2.2",
-    "jest-preset-angular": "8.3.2",
-    "prettier": "2.2.1",
+    "jest": "27.0.3",
+    "jest-preset-angular": "9.0.3",
+    "prettier": "2.3.1",
     "source-map-explorer": "^2.5.2",
-    "ts-jest": "26.4.0",
+    "ts-jest": "27.0.3",
     "ts-node": "9.1.1",
     "tslint": "6.1.3",
-    "typescript": "4.0.5"
+    "typescript": "4.3.5"
   }
 }
