--- a/package.json
+++ b/package.json
@@ -106,6 +106,7 @@
     "@types/jest": "26.0.8",
     "@types/mysql2": "github:types/mysql2",
     "@types/node": "14.14.33",
+    "@types/oidc-provider": "^7.6.0",
     "@types/socketcluster-client": "^15.1.3",
     "@types/socketcluster-server": "^15.0.1",
     "@types/spark-md5": "^3.0.2",
