--- a/nx.json
+++ b/nx.json
@@ -53,6 +53,13 @@
     "identity": {
       "tags": []
     },
+    "login": {
+      "tags": []
+    },
+    "login-e2e": {
+      "tags": [],
+      "implicitDependencies": ["login"]
+    },
     "material-ui-language-picker": {
       "tags": []
     },
