--- a/angular.json
+++ b/angular.json
@@ -14,7 +14,10 @@
             "outputPath": "dist/apps/api",
             "main": "apps/api/src/main.ts",
             "tsConfig": "apps/api/tsconfig.app.json",
-            "assets": ["apps/api/src/assets"]
+            "assets": [
+              "apps/api/src/assets",
+              "apps/api/src/silent-renew.html"
+            ]
           },
           "configurations": {
             "production": {
@@ -45,7 +48,10 @@
               "apps/api/tsconfig.app.json",
               "apps/api/tsconfig.spec.json"
             ],
-            "exclude": ["**/node_modules/**", "!apps/api/**/*"]
+            "exclude": [
+              "**/node_modules/**",
+              "!apps/api/**/*"
+            ]
           }
         },
         "test": {
@@ -132,7 +138,10 @@
               "libs/auth/shared/tsconfig.lib.json",
               "libs/auth/shared/tsconfig.spec.json"
             ],
-            "exclude": ["**/node_modules/**", "!libs/auth/shared/**/*"]
+            "exclude": [
+              "**/node_modules/**",
+              "!libs/auth/shared/**/*"
+            ]
           }
         },
         "test": {
@@ -185,7 +194,10 @@
               "libs/channels/shared/tsconfig.lib.json",
               "libs/channels/shared/tsconfig.spec.json"
             ],
-            "exclude": ["**/node_modules/**", "!libs/channels/shared/**/*"]
+            "exclude": [
+              "**/node_modules/**",
+              "!libs/channels/shared/**/*"
+            ]
           }
         },
         "test": {
@@ -233,12 +245,16 @@
         "lint": {
           "builder": "@nrwl/linter:eslint",
           "options": {
-            "lintFilePatterns": ["libs/database/entities/**/*.ts"]
+            "lintFilePatterns": [
+              "libs/database/entities/**/*.ts"
+            ]
           }
         },
         "test": {
           "builder": "@nrwl/jest:jest",
-          "outputs": ["coverage/libs/database/entities"],
+          "outputs": [
+            "coverage/libs/database/entities"
+          ],
           "options": {
             "jestConfig": "libs/database/entities/jest.config.js",
             "passWithNoTests": true
@@ -265,8 +281,13 @@
             "main": "apps/front/src/main.ts",
             "polyfills": "apps/front/src/polyfills.ts",
             "tsConfig": "apps/front/tsconfig.app.json",
-            "assets": ["apps/front/src/favicon.ico", "apps/front/src/assets"],
-            "styles": ["apps/front/src/styles.scss"],
+            "assets": [
+              "apps/front/src/favicon.ico",
+              "apps/front/src/assets"
+            ],
+            "styles": [
+              "apps/front/src/styles.scss"
+            ],
             "scripts": [],
             "vendorChunk": true,
             "extractLicenses": false,
@@ -331,7 +352,10 @@
               "apps/front/tsconfig.app.json",
               "apps/front/tsconfig.spec.json"
             ],
-            "exclude": ["**/node_modules/**", "!apps/front/**/*"]
+            "exclude": [
+              "**/node_modules/**",
+              "!apps/front/**/*"
+            ]
           }
         },
         "test": {
@@ -364,8 +388,13 @@
         "lint": {
           "builder": "@angular-devkit/build-angular:tslint",
           "options": {
-            "tsConfig": ["apps/front-e2e/tsconfig.e2e.json"],
-            "exclude": ["**/node_modules/**", "!apps/front-e2e/**/*"]
+            "tsConfig": [
+              "apps/front-e2e/tsconfig.e2e.json"
+            ],
+            "exclude": [
+              "**/node_modules/**",
+              "!apps/front-e2e/**/*"
+            ]
           }
         }
       }
@@ -378,12 +407,16 @@
       "architect": {
         "build": {
           "builder": "@nrwl/node:build",
-          "outputs": ["{options.outputPath}"],
+          "outputs": [
+            "{options.outputPath}"
+          ],
           "options": {
             "outputPath": "dist/apps/identity",
             "main": "apps/identity/src/main.ts",
             "tsConfig": "apps/identity/tsconfig.app.json",
-            "assets": ["apps/identity/src/assets"]
+            "assets": [
+              "apps/identity/src/assets"
+            ]
           },
           "configurations": {
             "production": {
@@ -408,12 +441,16 @@
         "lint": {
           "builder": "@nrwl/linter:eslint",
           "options": {
-            "lintFilePatterns": ["apps/identity/**/*.ts"]
+            "lintFilePatterns": [
+              "apps/identity/**/*.ts"
+            ]
           }
         },
         "test": {
           "builder": "@nrwl/jest:jest",
-          "outputs": ["coverage/apps/identity"],
+          "outputs": [
+            "coverage/apps/identity"
+          ],
           "options": {
             "jestConfig": "apps/identity/jest.config.js",
             "passWithNoTests": true
@@ -429,7 +466,9 @@
       "architect": {
         "build": {
           "builder": "@angular-devkit/build-angular:browser",
-          "outputs": ["{options.outputPath}"],
+          "outputs": [
+            "{options.outputPath}"
+          ],
           "options": {
             "outputPath": "dist/apps/login",
             "index": "apps/login/src/index.html",
@@ -437,8 +476,13 @@
             "polyfills": "apps/login/src/polyfills.ts",
             "tsConfig": "apps/login/tsconfig.app.json",
             "inlineStyleLanguage": "scss",
-            "assets": ["apps/login/src/favicon.ico", "apps/login/src/assets"],
-            "styles": ["apps/login/src/styles.scss"],
+            "assets": [
+              "apps/login/src/favicon.ico",
+              "apps/login/src/assets"
+            ],
+            "styles": [
+              "apps/login/src/styles.scss"
+            ],
             "scripts": []
           },
           "configurations": {
@@ -503,7 +547,9 @@
         },
         "test": {
           "builder": "@nrwl/jest:jest",
-          "outputs": ["coverage/apps/login"],
+          "outputs": [
+            "coverage/apps/login"
+          ],
           "options": {
             "jestConfig": "apps/login/jest.config.js",
             "passWithNoTests": true
@@ -532,7 +578,9 @@
         "lint": {
           "builder": "@nrwl/linter:eslint",
           "options": {
-            "lintFilePatterns": ["apps/login-e2e/**/*.{js,ts}"]
+            "lintFilePatterns": [
+              "apps/login-e2e/**/*.{js,ts}"
+            ]
           }
         }
       }
@@ -554,7 +602,9 @@
         },
         "test": {
           "builder": "@nrwl/jest:jest",
-          "outputs": ["coverage/libs/material/ui-language-picker"],
+          "outputs": [
+            "coverage/libs/material/ui-language-picker"
+          ],
           "options": {
             "jestConfig": "libs/material/ui-language-picker/jest.config.js",
             "passWithNoTests": true
@@ -613,7 +663,9 @@
         },
         "test": {
           "builder": "@nrwl/jest:jest",
-          "outputs": ["coverage/libs/material/ui-theme-picker"],
+          "outputs": [
+            "coverage/libs/material/ui-theme-picker"
+          ],
           "options": {
             "jestConfig": "libs/material/ui-theme-picker/jest.config.js",
             "passWithNoTests": true
@@ -654,7 +706,9 @@
             "tsConfig": "libs/socketcluster/adapter/tsconfig.lib.json",
             "packageJson": "libs/socketcluster/adapter/package.json",
             "main": "libs/socketcluster/adapter/src/index.ts",
-            "assets": ["libs/socketcluster/adapter/*.md"]
+            "assets": [
+              "libs/socketcluster/adapter/*.md"
+            ]
           }
         }
       }
@@ -672,7 +726,10 @@
               "libs/socketcluster/shared/tsconfig.lib.json",
               "libs/socketcluster/shared/tsconfig.spec.json"
             ],
-            "exclude": ["**/node_modules/**", "!libs/socketcluster/shared/**/*"]
+            "exclude": [
+              "**/node_modules/**",
+              "!libs/socketcluster/shared/**/*"
+            ]
           }
         },
         "test": {
@@ -750,7 +807,9 @@
             "tsConfig": "libs/socketcluster/utils-crud-server/tsconfig.lib.json",
             "packageJson": "libs/socketcluster/utils-crud-server/package.json",
             "main": "libs/socketcluster/utils-crud-server/src/index.ts",
-            "assets": ["libs/socketcluster/utils-crud-server/*.md"]
+            "assets": [
+              "libs/socketcluster/utils-crud-server/*.md"
+            ]
           }
         }
       }
@@ -788,7 +847,9 @@
             "tsConfig": "libs/utils/feature-gateway-explorer/tsconfig.lib.json",
             "packageJson": "libs/utils/feature-gateway-explorer/package.json",
             "main": "libs/utils/feature-gateway-explorer/src/index.ts",
-            "assets": ["libs/utils/feature-gateway-explorer/*.md"]
+            "assets": [
+              "libs/utils/feature-gateway-explorer/*.md"
+            ]
           }
         }
       }
@@ -806,12 +867,17 @@
               "libs/utils/forms-shared/tsconfig.lib.json",
               "libs/utils/forms-shared/tsconfig.spec.json"
             ],
-            "exclude": ["**/node_modules/**", "!libs/utils/forms-shared/**/*"]
+            "exclude": [
+              "**/node_modules/**",
+              "!libs/utils/forms-shared/**/*"
+            ]
           }
         },
         "test": {
           "builder": "@nrwl/jest:jest",
-          "outputs": ["coverage/libs/utils/forms-shared"],
+          "outputs": [
+            "coverage/libs/utils/forms-shared"
+          ],
           "options": {
             "jestConfig": "libs/utils/forms-shared/jest.config.js",
             "passWithNoTests": true
