--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
     "start": "ng serve",
     "start:front": "ng serve front",
     "start:front:network": "ng serve front --host 0.0.0.0 --ssl",
+    "start:login": "ng serve login --port 4201",
     "start:api": "ng serve api",
     "start:identity": "ng serve identity",
     "start:only-db": "docker-compose -f db-docker-compose.yml up",
@@ -61,6 +62,7 @@
     "@ngrx/entity": "12.2.0",
     "@ngrx/router-store": "12.2.0",
     "@ngrx/store": "12.2.0",
+    "angular-auth-oidc-client": "12.0.2",
     "async-stream-emitter": "^4.0.0",
     "bcrypt": "^5.0.1",
     "class-transformer": "0.3.2",
