--- a/libs/channels/data-access-server/tsconfig.lib.json
+++ b/libs/channels/data-access-server/tsconfig.lib.json
@@ -7,6 +7,6 @@
     "types": ["node"],
     "target": "es2019"
   },
-  "exclude": ["**/*.spec.ts"],
+  "exclude": ["**/*.spec.ts", "**/*.test.ts"],
   "include": ["**/*.ts"]
 }
