--- a/libs/contacts/feature-server-contacts/tsconfig.lib.json
+++ b/libs/contacts/feature-server-contacts/tsconfig.lib.json
@@ -7,6 +7,6 @@
     "types": ["node"],
     "target": "es2019"
   },
-  "exclude": ["**/*.spec.ts"],
+  "exclude": ["**/*.spec.ts", "**/*.test.ts"],
   "include": ["**/*.ts"]
 }
