--- a/libs/socketcluster/utils-crud-server/tsconfig.lib.json
+++ b/libs/socketcluster/utils-crud-server/tsconfig.lib.json
@@ -8,6 +8,6 @@
     "emitDecoratorMetadata": true,
     "experimentalDecorators": true
   },
-  "exclude": ["**/*.spec.ts"],
+  "exclude": ["**/*.spec.ts", "**/*.test.ts"],
   "include": ["**/*.ts"]
 }
