--- a/package.json
+++ b/package.json
@@ -38,35 +38,35 @@
   },
   "private": true,
   "dependencies": {
-    "@angular/animations": "12.1.0",
-    "@angular/cdk": "12.1.0",
-    "@angular/common": "12.1.0",
-    "@angular/compiler": "12.1.0",
-    "@angular/core": "12.1.0",
-    "@angular/forms": "12.1.0",
-    "@angular/material": "12.1.0",
-    "@angular/platform-browser": "12.1.0",
-    "@angular/platform-browser-dynamic": "12.1.0",
-    "@angular/router": "12.1.0",
-    "@mikro-orm/core": "^4.4.2",
-    "@mikro-orm/mysql": "^4.4.2",
-    "@mikro-orm/nestjs": "^4.2.0",
-    "@nestjs/common": "7.6.11",
-    "@nestjs/config": "0.6.3",
-    "@nestjs/core": "7.6.11",
-    "@nestjs/jwt": "7.2.0",
-    "@nestjs/platform-express": "7.6.11",
-    "@nestjs/websockets": "7.6.11",
-    "@ngneat/transloco": "2.20.0",
-    "@ngrx/effects": "12.2.0",
-    "@ngrx/entity": "12.2.0",
-    "@ngrx/router-store": "12.2.0",
-    "@ngrx/store": "12.2.0",
-    "angular-auth-oidc-client": "12.0.2",
+    "@angular/animations": "13.2.2",
+    "@angular/cdk": "13.2.2",
+    "@angular/common": "13.2.2",
+    "@angular/compiler": "13.2.2",
+    "@angular/core": "13.2.2",
+    "@angular/forms": "13.2.2",
+    "@angular/material": "13.2.2",
+    "@angular/platform-browser": "13.2.2",
+    "@angular/platform-browser-dynamic": "13.2.2",
+    "@angular/router": "13.2.2",
+    "@mikro-orm/core": "5.0.0",
+    "@mikro-orm/mysql": "5.0.0",
+    "@mikro-orm/nestjs": "4.3.1",
+    "@nestjs/common": "^8.2.6",
+    "@nestjs/config": "1.1.7",
+    "@nestjs/core": "^8.2.6",
+    "@nestjs/jwt": "8.0.0",
+    "@nestjs/platform-express": "^8.2.6",
+    "@nestjs/websockets": "8.2.6",
+    "@ngneat/transloco": "3.1.3",
+    "@ngrx/effects": "13.0.2",
+    "@ngrx/entity": "13.0.2",
+    "@ngrx/router-store": "13.0.2",
+    "@ngrx/store": "13.0.2",
+    "angular-auth-oidc-client": "13.1.0",
     "async-stream-emitter": "^4.0.0",
     "bcrypt": "^5.0.1",
-    "class-transformer": "0.3.2",
-    "class-validator": "0.13.1",
+    "class-transformer": "0.5.1",
+    "class-validator": "0.13.2",
     "cookie": "^0.4.1",
     "cookie-parser": "^1.4.5",
     "core-js": "3.8.3",
@@ -76,39 +76,39 @@
     "oidc-provider": "^7.6.0",
     "protobufjs": "^6.10.2",
     "reflect-metadata": "^0.1.13",
-    "rxjs": "^6.6.0",
+    "rxjs": "^7.0.0",
     "socketcluster-client": "16.0.2",
     "socketcluster-server": "^16.0.1",
     "spark-md5": "^3.0.1",
     "tslib": "^2.0.0",
     "uuid": "^8.3.2",
-    "zone.js": "~0.11.4"
+    "zone.js": "0.11.4"
   },
   "devDependencies": {
-    "@angular-devkit/build-angular": "12.1.4",
-    "@angular-eslint/eslint-plugin": "~12.3.0",
-    "@angular-eslint/eslint-plugin-template": "~12.3.0",
-    "@angular-eslint/template-parser": "~12.3.0",
-    "@angular/cli": "12.1.4",
-    "@angular/compiler-cli": "12.1.0",
-    "@angular/language-service": "12.1.0",
-    "@nestjs/schematics": "^7.0.1",
-    "@nestjs/testing": "^7.1.3",
-    "@ngrx/schematics": "12.2.0",
-    "@ngrx/store-devtools": "12.2.0",
-    "@nrwl/angular": "12.6.3",
-    "@nrwl/cypress": "12.6.3",
-    "@nrwl/eslint-plugin-nx": "12.6.3",
-    "@nrwl/jest": "12.6.3",
-    "@nrwl/nest": "12.6.3",
-    "@nrwl/node": "12.6.3",
-    "@nrwl/workspace": "12.6.3",
+    "@angular-devkit/build-angular": "13.2.3",
+    "@angular-eslint/eslint-plugin": "13.0.1",
+    "@angular-eslint/eslint-plugin-template": "13.0.1",
+    "@angular-eslint/template-parser": "13.0.1",
+    "@angular/cli": "13.2.3",
+    "@angular/compiler-cli": "13.2.2",
+    "@angular/language-service": "13.2.2",
+    "@nestjs/schematics": "^8.0.6",
+    "@nestjs/testing": "^8.2.6",
+    "@ngrx/schematics": "13.0.2",
+    "@ngrx/store-devtools": "13.0.2",
+    "@nrwl/angular": "13.8.1",
+    "@nrwl/cypress": "13.8.1",
+    "@nrwl/eslint-plugin-nx": "13.8.1",
+    "@nrwl/jest": "13.8.1",
+    "@nrwl/nest": "13.8.1",
+    "@nrwl/node": "13.8.1",
+    "@nrwl/workspace": "13.8.1",
     "@types/async-stream-emitter": "^3.0.0",
     "@types/bcrypt": "^3.0.0",
     "@types/cookie": "^0.4.0",
     "@types/cookie-parser": "^1.4.2",
     "@types/express": "^4.17.6",
-    "@types/jest": "26.0.8",
+    "@types/jest": "27.0.2",
     "@types/mysql2": "github:types/mysql2",
     "@types/node": "14.14.33",
     "@types/oidc-provider": "^7.6.0",
@@ -116,21 +116,22 @@
     "@types/socketcluster-server": "^15.0.1",
     "@types/spark-md5": "^3.0.2",
     "@types/uuid": "^8.3.1",
-    "@typescript-eslint/eslint-plugin": "4.3.0",
-    "@typescript-eslint/parser": "4.3.0",
+    "@typescript-eslint/eslint-plugin": "5.10.0",
+    "@typescript-eslint/parser": "5.10.0",
     "codelyzer": "6.0.0",
-    "cypress": "^4.10.0",
-    "dotenv": "8.2.0",
-    "eslint": "7.10.0",
-    "eslint-config-prettier": "6.0.0",
+    "cypress": "^9.4.1",
+    "dotenv": "10.0.0",
+    "eslint": "8.8.0",
+    "eslint-config-prettier": "8.1.0",
     "eslint-plugin-cypress": "^2.11.2",
-    "jest": "27.0.3",
-    "jest-preset-angular": "9.0.3",
-    "prettier": "2.3.1",
+    "jasmine-marbles": "~0.9.1",
+    "jest": "27.2.3",
+    "jest-preset-angular": "11.0.0",
+    "prettier": "2.5.1",
     "source-map-explorer": "^2.5.2",
-    "ts-jest": "27.0.3",
+    "ts-jest": "27.0.5",
     "ts-node": "9.1.1",
     "tslint": "6.1.3",
-    "typescript": "4.3.5"
+    "typescript": "4.5.5"
   }
 }
